Fixed 404 page flickering issues

--- a/src/features/messaging/components/ChatUser/ChatUser.module.css
+++ b/src/features/messaging/components/ChatUser/ChatUser.module.css
@@ -25,6 +25,7 @@
 
 .status {
   margin-top: 2px;
+  color: var(--secondary-text-color);
 }
 
 .report-btn {
